--- a/Sonic/Sonic.vcxproj.filters
+++ b/Sonic/Sonic.vcxproj.filters
@@ -22,6 +22,15 @@
     <Filter Include="Scene\ソース ファイル">
       <UniqueIdentifier>{5701f179-1f9c-4ff2-82ab-c57087a6152d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Character">
+      <UniqueIdentifier>{bc7ae243-1e7e-4895-99e2-c16914b93851}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Character\ヘッダー ファイル">
+      <UniqueIdentifier>{c798d5b0-4dbf-418e-b19d-880999dfd4ab}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Character\ソース ファイル">
+      <UniqueIdentifier>{5c5ec943-333c-4bdb-93ef-fd9dc2ad1838}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -48,11 +57,14 @@
     <ClCompile Include="Scene\Scene.cpp">
       <Filter>Scene\ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="Scene\SceneManager.cpp">
       <Filter>Scene\ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\PauseScene.cpp">
+      <Filter>Scene\ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Character\Player.cpp">
+      <Filter>Character\ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -77,11 +89,14 @@
     <ClInclude Include="Scene\Scene.h">
       <Filter>Scene\ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="Scene\SceneManager.h">
       <Filter>Scene\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\PauseScene.h">
+      <Filter>Scene\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Character\Player.h">
+      <Filter>Character\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
