--- a/Sonic/Sonic.vcxproj
+++ b/Sonic/Sonic.vcxproj
@@ -123,6 +123,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BackGroung.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Character\Actor.cpp" />
     <ClCompile Include="Character\Player.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -137,6 +139,8 @@
     <ClCompile Include="Scene\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BackGroung.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Character\Actor.h" />
     <ClInclude Include="Character\Player.h" />
     <ClInclude Include="Game.h" />
