--- a/Sonic/Sonic.vcxproj
+++ b/Sonic/Sonic.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="Peripheral.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Scene\GamePlayingScene.h" />
     <ClInclude Include="Scene\PauseScene.h" />
     <ClInclude Include="Scene\ResultScene.h" />
@@ -156,6 +157,12 @@
     <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="Scene\TitleScene.h" />
     <ClInclude Include="Stage.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Sonic.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="img\squirrel.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
