動く床について

--- a/Sonic/Sonic.vcxproj
+++ b/Sonic/Sonic.vcxproj
@@ -127,6 +127,8 @@
     <ClCompile Include="Block\Block.cpp" />
     <ClCompile Include="Block\BlockFactory.cpp" />
     <ClCompile Include="Block\Brick.cpp" />
+    <ClCompile Include="Block\Lift.cpp" />
+    <ClCompile Include="Block\Slide.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Character\Actor.cpp" />
     <ClCompile Include="Character\Player.cpp" />
@@ -149,6 +151,8 @@
     <ClInclude Include="Block\Block.h" />
     <ClInclude Include="Block\BlockFactory.h" />
     <ClInclude Include="Block\Brick.h" />
+    <ClInclude Include="Block\Lift.h" />
+    <ClInclude Include="Block\Slide.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Character\Actor.h" />
     <ClInclude Include="Character\Player.h" />
