--- a/Sonic/Sonic.vcxproj.filters
+++ b/Sonic/Sonic.vcxproj.filters
@@ -102,6 +102,12 @@
     <ClCompile Include="Collider.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Block\Slide.cpp">
+      <Filter>Block\ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Block\Lift.cpp">
+      <Filter>Block\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -163,6 +169,12 @@
     </ClInclude>
     <ClInclude Include="Collider.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Block\Slide.h">
+      <Filter>Block\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Block\Lift.h">
+      <Filter>Block\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
