--- a/Sonic/Sonic.vcxproj
+++ b/Sonic/Sonic.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Block\BlockFactory.cpp" />
     <ClCompile Include="Block\Brick.cpp" />
     <ClCompile Include="Block\Lift.cpp" />
+    <ClCompile Include="Block\Pendulum.cpp" />
     <ClCompile Include="Block\Slide.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Character\Actor.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Block\BlockFactory.h" />
     <ClInclude Include="Block\Brick.h" />
     <ClInclude Include="Block\Lift.h" />
+    <ClInclude Include="Block\Pendulum.h" />
     <ClInclude Include="Block\Slide.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Character\Actor.h" />
