--- a/Sonic/Sonic.vcxproj.filters
+++ b/Sonic/Sonic.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="Block\Lift.cpp">
       <Filter>Block\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Block\Pendulum.cpp">
+      <Filter>Block\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -174,6 +177,9 @@
       <Filter>Block\ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Block\Lift.h">
+      <Filter>Block\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Block\Pendulum.h">
       <Filter>Block\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
