--- a/Sonic/Sonic.vcxproj.filters
+++ b/Sonic/Sonic.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClCompile Include="Block\Pendulum.cpp">
       <Filter>Block\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Character\Ant.cpp">
+      <Filter>Character\ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Character\Enemy.cpp">
+      <Filter>Character\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -181,6 +187,12 @@
     </ClInclude>
     <ClInclude Include="Block\Pendulum.h">
       <Filter>Block\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Character\Ant.h">
+      <Filter>Character\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Character\Enemy.h">
+      <Filter>Character\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
