--- a/Sonic/Sonic.vcxproj
+++ b/Sonic/Sonic.vcxproj
@@ -148,6 +148,9 @@
     <ClCompile Include="Scene\SceneManager.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="System\ActionLoader.cpp" />
+    <ClCompile Include="System\FileSystem.cpp" />
+    <ClCompile Include="System\ImageLoader.cpp" />
     <ClCompile Include="System\Loader.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -176,6 +179,9 @@
     <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="Scene\TitleScene.h" />
     <ClInclude Include="Stage.h" />
+    <ClInclude Include="System\ActionLoader.h" />
+    <ClInclude Include="System\FileSystem.h" />
+    <ClInclude Include="System\ImageLoader.h" />
     <ClInclude Include="System\Loader.h" />
   </ItemGroup>
   <ItemGroup>
