--- a/Sonic/Sonic.vcxproj
+++ b/Sonic/Sonic.vcxproj
@@ -136,10 +136,13 @@
     <ClCompile Include="Block\Pendulum.cpp" />
     <ClCompile Include="Block\Slide.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="Event.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Ground.cpp" />
+    <ClCompile Include="HUD.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Peripheral.cpp" />
     <ClCompile Include="Scene\GamePlayingScene.cpp" />
@@ -148,6 +151,7 @@
     <ClCompile Include="Scene\Scene.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
+    <ClCompile Include="Spawner\InfiniteSpawner.cpp" />
     <ClCompile Include="Spawner\OnetimeSpawner.cpp" />
     <ClCompile Include="Spawner\Spawner.cpp" />
     <ClCompile Include="Spawner\SpawnerFactory.cpp" />
@@ -171,10 +175,13 @@
     <ClInclude Include="Block\Pendulum.h" />
     <ClInclude Include="Block\Slide.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Coin.h" />
     <ClInclude Include="Collider.h" />
+    <ClInclude Include="Event.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Ground.h" />
+    <ClInclude Include="HUD.h" />
     <ClInclude Include="Peripheral.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Scene\GamePlayingScene.h" />
@@ -183,6 +190,7 @@
     <ClInclude Include="Scene\Scene.h" />
     <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="Scene\TitleScene.h" />
+    <ClInclude Include="Spawner\InfiniteSpawner.h" />
     <ClInclude Include="Spawner\OnetimeSpawner.h" />
     <ClInclude Include="Spawner\Spawner.h" />
     <ClInclude Include="Spawner\SpawnerFactory.h" />
